<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:scaleType="fitCenter"/>
    
    <TextView
        android:id="@+id/tvChooseMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_play_choose_mode"
        android:layout_below="@+id/ivAppLogo"
        android:layout_marginTop="26dp"
        style="@style/primaryTextStyle"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPlayWithFriend"
        style="@style/buttonStyle"
        android:layout_marginTop="28dp"
        android:layout_below="@id/tvChooseMode"
        android:text="@string/wid_your_friend"
        android:foreground="?android:selectableItemBackground"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPlayWithAI"
        style="@style/ai_Button_Style"
        android:layout_marginTop="28dp"
        android:layout_below="@id/buttonPlayWithFriend"
        android:text="@string/wid_ai"
        android:foreground="?android:selectableItemBackground"/>

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings_logo"
        android:layout_below="@id/buttonPlayWithAI"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="?android:selectableItemBackground"
        app:tint="@color/gray_700" />



</RelativeLayout>